# unisic

./: .gitignore  .packit.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  app.unisic.Unisic.yml  flake.nix  org.unisic.Unisic.yml  unisic.spec
.claude/skills/perf-audit/: SKILL.md
.claude/skills/ponytail-perf-audit/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: appimage.yml  build.yml  nix.yml  release.yml  tarball-backfill.yml
cmake/: BuildDate.cmake
i18n/: unisic_en.ts  unisic_es.ts  unisic_fr.ts  unisic_it.ts  unisic_pl.ts
nix/: package.nix  vm.nix
packaging/arch/: PKGBUILD  unisic.install
packaging/deb/: postinst  postrm
packaging/flathub/: README.md  app.unisic.Unisic.yml
packaging/obs/: README.md  _service  debian.changelog  debian.control  debian.rules  home_unisic.key  unisic.dsc
packaging/rpm/: copr-post.sh  copr-postun.sh  unisic-copr-repo.spec
qml/: EditorWindow.qml  Main.qml  NotificationPopup.qml  OverlayWindow.qml  PreviewWindow.qml  RecordBorder.qml  Theme.qml  ToolCatalog.qml  TrimWindow.qml
qml/components/: ColorDot.qml  MiddleScroll.qml  SidebarItem.qml  ToolChip.qml  ToolPropsBar.qml  UButton.qml  UCard.qml  UColorPopup.qml  UComboBox.qml  UConfirmDialog.qml  UFilterChip.qml  UHoverTip.qml  UIcon.qml  UIconButton.qml  UMenuButton.qml  UNotifPreview.qml  UPatchNotes.qml  USettingRow.qml  UShortcutList.qml  UShortcutRecorder.qml  UShortcutsHelp.qml  USlider.qml  USpinBox.qml  USplitIconButton.qml  USwitch.qml  USystemCheck.qml  UTextField.qml  UValueCombo.qml  UWelcome.qml  VideoPreview.qml  WheelBoost.qml
qml/pages/: CapturePage.qml  DestinationsPage.qml  EditPage.qml  GifPage.qml  HistoryPage.qml  RecordPage.qml  SettingsPage.qml
resources/: CHANGELOG.md  app.unisic.Unisic.desktop  app.unisic.Unisic.metainfo.xml  org.unisic.Unisic.desktop  org.unisic.Unisic.metainfo.xml
resources/icons/tray/: README.md
resources/themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  gruvbox.json  nord.json
scripts/: build-appimage.sh  gen-changelog.sh  vm-test.sh
src/: AppContext.cpp  AppContext.h  ConfigPath.h  FilenameTemplate.h  PreviewController.cpp  PreviewController.h  Settings.h  main.cpp
src/actions/: ExternalActionRunner.cpp  ExternalActionRunner.h
src/capture/: CaptureManager.cpp  CaptureManager.h  GnomeScreenshot.cpp  GnomeScreenshot.h  GrimScreenshot.cpp  GrimScreenshot.h  KWinScreenShot2.cpp  KWinScreenShot2.h  PortalRequest.cpp  PortalRequest.h  PortalScreenshot.cpp  PortalScreenshot.h  ScreenCastSession.cpp  ScreenCastSession.h
src/editor/: AnnotationCanvas.cpp  AnnotationCanvas.h  EditorSession.cpp  EditorSession.h  ImageEffects.cpp  ImageEffects.h
src/history/: HistoryFilterModel.cpp  HistoryFilterModel.h  HistoryStore.cpp  HistoryStore.h
src/hotkeys/: GlobalHotkeys.cpp  GlobalHotkeys.h  PortalGlobalShortcuts.cpp  PortalGlobalShortcuts.h  ShortcutBinder.cpp  ShortcutBinder.h  ShortcutFormat.h  ShortcutKeyMap.h
src/notify/: CaptureNotification.cpp  CaptureNotification.h  DesktopNotifier.cpp  DesktopNotifier.h  LayerShellNotifier.cpp  LayerShellNotifier.h  NotifCard.h  NotificationHelper.cpp  NotificationHelper.h  NotificationInhibitor.cpp  NotificationInhibitor.h
src/ocr/: OcrEngine.cpp  OcrEngine.h  OcrWord.h
src/overlay/: ObjectDetector.cpp  ObjectDetector.h  OverlayController.cpp  OverlayController.h  WindowRects.cpp  WindowRects.h
src/record/: ClickCapture.h  CursorOverlayPainter.cpp  CursorOverlayPainter.h  CursorSmoother.cpp  CursorSmoother.h  GifRecorder.cpp  GifRecorder.h  InputPermission.h  KeyCapture.cpp  KeyCapture.h  KeystrokeOverlayPainter.cpp  KeystrokeOverlayPainter.h  PipeWireGrabber.cpp  PipeWireGrabber.h  RecordBorderController.cpp  RecordBorderController.h  RecordBorderHelper.cpp  RecordBorderHelper.h  StreamGeometry.h  TrimController.cpp  TrimController.h
src/segment/: U2NetSegmenter.cpp  U2NetSegmenter.h
src/theme/: IconImageProvider.cpp  IconImageProvider.h  ThemeController.cpp  ThemeController.h  ThemeJson.h
src/update/: UpdateChecker.cpp  UpdateChecker.h  VersionCompare.h
src/upload/: UploadManager.cpp  UploadManager.h
tests/: AnnotationCanvasTest.cpp  FilenameTemplateTest.cpp  HistoryFilterTest.cpp  KeystrokeOverlayTest.cpp  ObjectDetectorTest.cpp  SettingsPersistenceTest.cpp  ShortcutBinderTest.cpp  ShortcutFormatTest.cpp  StreamGeometryTest.cpp  ThemeJsonTest.cpp  VersionCompareTest.cpp
